# matf-master

./: .gitignore  MODULE.bazel  requirements.in  requirements.txt
src/algo/: BUILD.bazel  README.md  benchmark.py  cp_runner.py  cp_solver.py  data.py  input.json  input_full_1_semester.json  input_full_1_semester_condensed.json  input_full_2_semester.json  mip_runner.py  mip_solver.py  model.py  report.py  test_cp_solver.py  test_data.py  test_mip_solver.py
