load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_test(
    name = "test_data",
    srcs = ["model.py", "data.py", "test_data.py"],
    data = ["input.json"],
    deps = [        
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//pyfunctional",
    ],
)

py_test(
    name = "test_cp_solver",
    srcs=["model.py", "data.py", "cp_solver.py", "test_cp_solver.py"],
    deps = [
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//pyfunctional",
        "@pip//ortools",
    ],
)

py_binary(
    name = "run_cp_solver",
    srcs = [
        "model.py",
        "data.py",
        "cp_solver.py",
        "report.py",
        "cp_runner.py",
    ],
    data = ["input.json"],
    deps = [
        "@pip//pydantic",
        "@pip//ortools",
        "@pip//openpyxl",
        "@pip//pyfunctional",
    ],
    main = "cp_runner.py",
)

py_binary(
    name = "run_mip_solver",
    srcs = [
        "model.py",
        "data.py",
        "mip_solver.py",
        "report.py",
        "mip_runner.py",
    ],
    data = ["input.json"],
    deps = [
        "@pip//pydantic",
        "@pip//ortools",
        "@pip//openpyxl",
        "@pip//pyfunctional",
    ],
    main = "mip_runner.py",
)

py_test(
    name = "test_mip_solver",
    srcs = ["model.py", "data.py", "mip_solver.py", "test_mip_solver.py"],
    deps = [
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//ortools",
        "@pip//pyfunctional",
    ],
)
